v0.1.0 (#51)
* Better socketio (#42)

* big refactor

* go mod tidy

* fix cd dev

* join lobby fixes, matches

* Fix lobby join on finish

* Room diconnect fix

* Allow more chaos

* settings update in finished

* fix e2e

* Made http endpoints output a dto

* Regenerated swagger docs.

* Removed domain.Lobby from presentation layer.

* moved dto to usecase, refactored many usecase methods to not pull places from database

* updated swagger

* lint fix

* Add url to place (#46)

* Add url to place

* fix

* fix2

* get place by url endpoint (#47)

* feat(auth-middleware): Added auth middleware & protected tag and place routes. (#48)

* Added auth middleware

* fixed lint

* hotfix(allowed-headers) #49

* image -> images

* image -> images

* update golden

* Match after all like

* fix(lint): fixed lint errors

---------
