# internal/gateways/http/lobby/dto.go
@@ -1,10 +1,10 @@
 package lobby
 
 import (
-	"dishdash.ru/internal/domain"
+	"dishdash.ru/internal/usecase"
 )
 
 type nearestLobbyOutput struct {
-	Dist  float64       `json:"distance"`
-	Lobby *domain.Lobby `json:"lobby"`
+	Dist  float64              `json:"distance"`
+	Lobby *usecase.LobbyOutput `json:"lobby"`
 }
